cmake_minimum_required(VERSION 3.16)
project(VipDataType VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Set up AUTOMOC and some sensible defaults for runtime execution
# When using Qt 6.3, you can replace the code block below with
# qt_standard_project_setup()
set(CMAKE_AUTOMOC ON)
include(GNUInstallDirs)

FILE(GLOB Sources *.cpp)
FILE(GLOB Headers *.h)

if(NOT WITH_VTK)
	list(FILTER Sources EXCLUDE REGEX "^.*VTK.*$")
	list(FILTER Headers EXCLUDE REGEX "^.*VTK.*$")
	list(FILTER Sources EXCLUDE REGEX "^.*FieldOfView.*$")
	list(FILTER Headers EXCLUDE REGEX "^.*FieldOfView.*$")
endif()

add_library(VipDataType SHARED
    ${Sources} ${Headers}
)

target_include_directories(VipDataType PRIVATE
    .
)

target_compile_definitions(VipDataType PRIVATE
    VIP_BUILD_DATA_TYPE_LIB
)

set(TARGET_PROJECT VipDataType)
include(${THERMAVIP_COMPILER_FLAGS_FILE})

install(TARGETS VipDataType
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
install(TARGETS VipDataType
    LIBRARY DESTINATION "${THERMAVIP_APPLICATION_DIR}"
    FRAMEWORK DESTINATION "${THERMAVIP_APPLICATION_DIR}"
    RUNTIME DESTINATION "${THERMAVIP_APPLICATION_DIR}"
)
install(TARGETS VipDataType
	LIBRARY DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
    FRAMEWORK DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
    RUNTIME DESTINATION "${THERMAVIP_EXAMPLE_DIR}"
)
install(TARGETS VipDataType
	LIBRARY DESTINATION "${THERMAVIP_TEST_DIR}"
    FRAMEWORK DESTINATION "${THERMAVIP_TEST_DIR}"
    RUNTIME DESTINATION "${THERMAVIP_TEST_DIR}"
)

file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/*.h)
install(FILES ${HEADER_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/VipDataType/")